--- a/css/main.css
+++ b/css/main.css
@@ -48,3 +48,52 @@ nav .nav-right-section img {
     border-radius: 50%;
     margin-left: 10px;
 }
+
+main {
+    margin-top: 90px;
+    text-align: center;
+}
+
+main .main-logo {
+    width: 530px;
+    margin: 0 auto;
+    margin-bottom: 0px;
+}
+
+main .main-logo img {
+    width: 530px;
+}
+
+main .main-input {
+    width: 530px;
+    margin: 0 auto;
+    margin-bottom: 35px;
+}
+
+main .main-input-container {
+    width: 525px;
+    border-radius: 100px;
+    border: 1px solid #dfe1e5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main .main-input input {
+    width: 450px;
+    height: 40px;
+    border: none;
+    outline: none;
+}
+
+main .main-input-container .search-icon {
+    border: 1px solid green;
+}
+
+main .main-input-container .text {
+    border: 1px solid red;
+}
+
+main .main-input-container .micro-icon {
+    border: 1px solid blue;
+}
